# GBIS

./: CMakeLists.txt
cmake/: FindGBIS.cmake  InternalMacros.cmake
src/: CMakeLists.txt  segmentator.cpp  segmentator.h
